fixed center align text issue

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ header .landing-logo {
     width: 8em;
 }
 header h1 {
+    text-align: center;
     font-size: 3.5em;
     color: var(--primary);
     cursor: default;
